# braille-python

./: .gitignore  README.md  example01.py  example01a.py  example01b.py  example02.py  example02a.py  example02b.py  example02c.py  example03.py  example03a.py  example03b.py  example03c.py  example03d.py  example04a.py  pyproject.toml  requirements.txt
.github/workflows/: README.md  lint.yml  pylint.yml
docs/: BI 20X EN-UG 1.1.1.md  Installation.md  issues.md  python_naming_conventions.md
docs/designs/: example06-design.md  example07-design.md  example08-design.md
examples/: EXAMPLES_STATUS.md  README.md  example01.py  example01a.py  example01b.py  example02.py  example02a.py  example02b.py  example02c.py  example03c.py  example04.py  example04a.py  example05.py  example06.py  example07.py  example08.py
scripts/: README.md  diagnostics.py  fix_brltty_installation.sh  setup_braille_display.sh
src/: __init__.py  library.py  main.py  model.py  update.py  view.py
tests/: README.md  __init__.py  conftest.py  test_examples.py  test_integration.py  test_library.py  test_main.py  test_model.py  test_update.py  test_view.py
